--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
       type="text/javascript"
     ></script>
 
+    <!-- JSCPP-NG -->
+    <script
+      src="%PUBLIC_URL%/JSCPP/JSCPP.es5.min.js"
+      type="text/javascript"
+    ></script>
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
